...
      </View>
    );
  }

  return (
    <KeyboardAwareScreen style={s.root}>
      <ScreenHeader title="Xác nhận đơn hàng" />

      <ScrollView showsVerticalScrollIndicator={false} contentContainerStyle={s.body}>
        {cart && <OrderSummary items={cart.items} totalItems={cart.totalItems} />}

        <RecipientSelector
          selectedAddress={selectedAddress}
...
